--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "form-data": "^4.0.0",
     "leaflet": "^1.8.0",
     "svelte-spa-router": "^3.2.0",
     "svelte-star-rating": "^1.3.2"
