--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "form-data": "^4.0.0",
     "leaflet": "^1.8.0",
+    "svelte-simple-modal": "^1.3.3",
     "svelte-spa-router": "^3.2.0",
     "svelte-star-rating": "^1.3.2"
   }
