--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bulma-carousel": "^4.0.24",
     "form-data": "^4.0.0",
     "leaflet": "^1.8.0",
     "svelte-simple-modal": "^1.3.3",
