--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bulma-carousel": "^4.0.24",
     "form-data": "^4.0.0",
     "leaflet": "^1.8.0",
+    "leaflet-geosearch": "^3.6.1",
     "svelte-frappe-charts": "^1.9.2",
     "svelte-select": "^4.4.7",
     "svelte-simple-modal": "^1.3.3",
