--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bulma-carousel": "^4.0.24",
+    "bulma-switch": "^2.0.4",
     "form-data": "^4.0.0",
     "leaflet": "^1.8.0",
     "leaflet-geosearch": "^3.6.1",
