--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^2.9.7"
   },
   "dependencies": {
+    "@splidejs/svelte-splide": "^0.2.5",
     "axios": "^0.27.2",
     "bulma-carousel": "^4.0.24",
     "bulma-switch": "^2.0.4",
