--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leaflet-geosearch": "^3.6.1",
     "svelte-frappe-charts": "^1.9.2",
     "svelte-select": "^4.4.7",
+    "svelte-sidebar-panels": "^1.0.1",
     "svelte-simple-modal": "^1.3.3",
     "svelte-spa-router": "^3.2.0",
     "svelte-star-rating": "^1.3.2"
